Satisfaction API implemented and tested in Postman
